# Rust_algorithm

./: .gitignore  .stylelintrc.json  Cargo.toml  README.md  next.config.js  package.json  q  template.md  tsconfig.json
.claude/: settings.local.json
.storybook/: main.js
libs/: client.ts  dateFormat.tsx
pages/: _app.tsx  index.tsx
src/: aoj.rs  atcoder.rs  basic.rs  leetcode.rs  lib.rs  main.rs  nlp_100_knock.rs  other.rs  paiza.rs  project_euler.rs  yukicoder.rs
src/aoj/: alds1_5.rs  atp1.rs  atp1_7.rs  itp1.rs  volume7.rs
src/atcoder/: abc0xx.rs  abc110.rs  abc112.rs  abc115.rs  abc120.rs  abc136.rs  abc143.rs  abc144.rs  abc145.rs  abc146.rs  abc148.rs  abc155.rs  abc157.rs  abc176.rs  abc185.rs  abc186.rs  abc187.rs  abc189.rs  abc196.rs  abc1xx.rs  abc276.rs  abc279.rs  abc294.rs  abc295.rs  abc298.rs  abc2xx.rs  abc302.rs  abc3xx.rs  abc4xx.rs  agc0xx.rs  arc0xx.rs  arc1xx.rs  educational_dp.rs  hhkb2020.rs  joi.rs  math_and_algorithm.rs  other_contest.rs  pakencamp2019.rs  past.rs  tessoku_book.rs  (+1 more)
src/basic/: prime_number.rs
src/components/: Header.tsx  Test.stories.tsx  Test.tsx
src/leetcode/: leet0xx.rs  leet15xx.rs  leet1xx.rs  leet2xx.rs  leet33xx.rs  leet3xx.rs
src/lib/: graph.rs  lower_bound.rs  manhattan_distance.rs  run_length.rs  upper_bound.rs
src/nlp_100_knock/: nlp_00.rs  nlp_01.rs  nlp_02.rs  nlp_03.rs  nlp_04.rs
src/other/: islands.rs
src/paiza/: s.rs
src/project_euler/: pe01_multiples_of_3_or_5.rs  (+3 more)
stories/: Test.stories.tsx  Test.tsx
styles/: Home.module.scss  globals.scss  header.module.scss  index.module.scss
(+2680 files in other folders)
