[package]
name = "rust_algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.3"
itertools = "0.10.5"
num-integer = "0.1.45"
regex = "1.10.3"

[dev-dependencies]
rstest = "0.18.2"
